--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 
 <body>
-    <h1 class="bg-black">Testando</h1>
+    <h1 class="bg-newBlue font-openSans">Testando</h1>
 </body>
 </html>
