Starting the first container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <title>Pricing Table</title>
 </head>
 
-<body>
-    <h1 class="bg-newBlue font-openSans">Testando</h1>
+<body class="font-sans">
+    <main>
+        <div id="main__first--container" class="bg-newBlue h-1/2">
+            <h1 class="text-white text-2xl font-semibold text-center pt-4 pb-2">Conheça nossos planos</h1>
+            <p class="text-newGray text-xs text-center mx-auto w-1/2">Conheça nossas soluções e escolha o plano ideal para o seu próximo projeto.</p>
+        </div>
+    </main>
 </body>
 </html>
