--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             <h1 class="text-white text-2xl font-semibold text-center pt-4 pb-2">Conheça nossos planos</h1>
             <p class="text-newGray text-xs text-center mx-auto w-1/2">Conheça nossas soluções e escolha o plano ideal para o seu próximo projeto.</p>
         </div>
+
+        <section id="section__free" class="border-solid border-2 border-black p-4 w-2/3">
+            <p class="font-semibold text-sm mb-4">Free</p>
+            <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
+            <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <hr>
+            <div class="section__first--check flex items-center gap-2">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="section__second--check flex items-center gap-2">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
