--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
             <p class="text-newGray text-xs text-center mx-auto w-1/2">Conheça nossas soluções e escolha o plano ideal para o seu próximo projeto.</p>
         </div>
 
-        <section id="section__free" class="border-solid border-2 border-black p-4 w-2/3">
+        <section id="section__free" class="border-solid border-2 border-black p-4 w-2/3 mx-auto">
             <p class="font-semibold text-sm mb-4">Free</p>
             <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
             <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <hr>
-            <div class="section__first--check flex items-center gap-2">
+            <div class="flex items-center gap-2">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
-            <div class="section__second--check flex items-center gap-2">
+            <div class="flex items-center gap-2 mb-24">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
+            <p class="border-solid border-2 border-newBlue rounded-lg uppercase text-newBlue font-semibold py-1 text-center">Assinar</p>
         </section>
     </main>
 </body>
