Finishing the sections

--- a/index.html
+++ b/index.html
@@ -25,35 +25,75 @@
             <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
             <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <hr>
+
             <div class="flex items-center gap-2">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
+
             <div class="flex items-center gap-2 mb-24">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
+
             <p class="border-solid border-2 border-newBlue rounded-lg uppercase text-newBlue font-semibold py-1 text-center">Assinar</p>
         </section>
 
-        <section id="section__basic" class="border-solid border-2 border-black rounded p-4 w-2/3 mx-auto">
-            <p class="font-semibold text-sm mb-4">Básico</p>
-            <p class="font-bold text-lg mb-1">R$ 29<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
+        <section id="section__basic" class="border-solid border-2 border-black rounded w-2/3 mx-auto">
+            <div id="search__button--container" class="bg-newYellow flex items-center px-4 py-3 mb-4">
+                <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
+                <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
+            </div>
+
+            <p class="font-bold text-lg px-4 mb-1">R$ 29<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
+            <p class="text-xs text-newGray px-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <hr>
+
+            <div class="flex items-center gap-2 px-4">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <div class="flex items-center gap-2 px-4">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <div class="flex items-center gap-2 px-4 mb-24">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <p class="border-solid border-2 border-newBlue rounded-lg uppercase bg-newBlue text-white font-semibold py-2 text-center w-11/12 mx-auto mb-4">Assinar</p>
+        </section>
+
+        <section id="section__profissional" class="border-solid border-2 border-black rounded p-4 w-2/3 mx-auto">
+            <p class="font-semibold text-sm mb-4">Profissional</p>
+            <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
             <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <hr>
+
             <div class="flex items-center gap-2">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
+
             <div class="flex items-center gap-2">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
+
+            <div class="flex items-center gap-2">
+                <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+            </div>
+
             <div class="flex items-center gap-2 mb-24">
                 <img src="src/icons/check.svg" class="mt-4" alt="Check">
                 <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
             </div>
-            <p class="border-solid border-2 border-newBlue rounded-lg uppercase bg-newBlue text-white font-semibold py-1 text-center">Assinar</p>
+
+            <p class="border-solid border-2 border-newBlue rounded-lg uppercase text-newBlue font-semibold py-1 text-center">Assinar</p>
         </section>
     </main>
 </body>
