Adjusting section 2 position

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body class="font-sans">
     <main class="flex flex-col">
-        <div id="main__first--container" class="bg-newBlue h-screen mb-0">
-            <h1 class="text-white text-2xl font-semibold text-center pt-4 pb-2">Conheça nossos planos</h1>
-            <p class="text-newGray text-xs text-center mx-auto w-1/2">Conheça nossas soluções e escolha o plano ideal para o seu próximo projeto.</p>
+        <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
+        <div id="main__first--container" class="bg-newBlue h-screen">
+            <p class="text-newGray text-xs text-center mx-auto w-1/2 mt-0">Conheça nossas soluções e escolha o plano ideal para o seu próximo projeto.</p>
             
             <section id="section__free" class="bg-white rounded p-4 w-2/3 mt-4 mx-auto">
                 <p class="font-semibold text-sm mb-4">Free</p>
@@ -67,8 +67,8 @@
             <p class="assign__blue">Assinar</p>
         </section>
 
-        <div id="main__second--container" class="bg-newGray h-screen relative mt-0">
-            <section id="section__profissional" class="third__section">
+        <div id="main__second--container" class="bg-slate-100 h-screen relative mt-0">
+            <section id="section__profissional" class="third__section bg-white ">
                 <p class="font-semibold text-sm mb-4">Profissional</p>
                 <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span class="text-xs text-newGray">/mês</span></p>
                 <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
