Refactoring second section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <section id="section__basic" class="second__section">
-            <div id="search__button--container" class="bg-newYellow flex items-center px-4 py-3 mb-4">
+            <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
                 <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
                 <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
             </div>
