--- a/index.html
+++ b/index.html
@@ -15,91 +15,93 @@
 </head>
 
 <body class="font-sans">
-    <main class="flex flex-col bg-newBlue">
-        <div id="main__first--container" class="">
+    <main class="bg-newBlue flex flex-col">
+        <div id="main__text--container">
             <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
             <p class="text-newGray text-xs text-center mx-auto w-1/2 mt-0">Conheça nossas soluções e escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
 
-        <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3">
-            <p class="font-semibold text-sm mb-4">Free</p>
-            <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
-                    class="text-xs text-newGray">/mês</span></p>
-            <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <hr>
+        <div id="sections__container">
+            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3">
+                <p class="font-semibold text-sm mb-4">Free</p>
+                <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
+                        class="text-xs text-newGray">/mês</span></p>
+                <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <hr>
 
-            <div class="flex items-center gap-2">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2 mb-32">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2 mb-32">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <p class="assign__white">Assinar</p>
-        </section>
+                <p class="assign__white">Assinar</p>
+            </section>
 
-        <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto w-2/3">
-            <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
-                <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
-                <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
-            </div>
+            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3">
+                <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
+                    <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
+                    <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
+                </div>
 
-            <p class="font-bold text-lg px-4 mb-1">R$ 29<span class="text-xs">,00</span><span
-                    class="text-xs text-newGray">/mês</span></p>
-            <p class="text-xs text-newGray px-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <hr>
+                <p class="font-bold text-lg px-4 mb-1">R$ 29<span class="text-xs">,00</span><span
+                        class="text-xs text-newGray">/mês</span></p>
+                <p class="text-xs text-newGray px-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <hr>
 
-            <div class="flex items-center gap-2 px-4">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2 px-4">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2 px-4">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2 px-4">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2 px-4 mb-24">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2 px-4 mb-24">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <p class="assign__blue">Assinar</p>
-        </section>
+                <p class="assign__blue">Assinar</p>
+            </section>
 
-        <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3">
-            <p class="font-semibold text-sm mb-4">Profissional</p>
-            <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span
-                    class="text-xs text-newGray">/mês</span></p>
-            <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <hr>
+            <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3">
+                <p class="font-semibold text-sm mb-4">Profissional</p>
+                <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span
+                        class="text-xs text-newGray">/mês</span></p>
+                <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <hr>
 
-            <div class="flex items-center gap-2">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <div class="flex items-center gap-2 mb-24">
-                <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
-            </div>
+                <div class="flex items-center gap-2 mb-24">
+                    <img src="src/icons/check.svg" class="mt-4" alt="Check">
+                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                </div>
 
-            <p class="assign__white">Assinar</p>
-        </section>
+                <p class="assign__white">Assinar</p>
+            </section>
+        </div>
     </main>
 </body>
 
