Refactoring bg image

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 </head>
 
 <body class="font-sans">
-    <main class="bg-newBlue flex flex-col">
+    <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen">
         <div id="main__text--container">
             <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
             <p class="text-newGray text-xs text-center mx-auto w-1/2 mt-0">Conheça nossas soluções e escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
 
-        <div id="sections__container">
+        <div id="sections__container" class="">
+
             <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3">
                 <p class="font-semibold text-sm mb-4">Free</p>
                 <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
