Updating laptop positions

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </head>
 
 <body class="font-sans">
-    <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen">
+    <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
         <div id="main__text--container">
             <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
             <p class="text-newGray text-xs text-center mx-auto w-1/2 mt-0">Conheça nossas soluções e escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
 
-        <div id="sections__container" class="">
+        <div id="sections__container" class="laptop:flex gap-8 items-baseline justify-center">
 
-            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3">
+            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 laptop:w-64 laptop:mx-0">
                 <p class="font-semibold text-sm mb-4">Free</p>
                 <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
                         class="text-xs text-newGray">/mês</span></p>
@@ -44,7 +44,7 @@
                 <p class="assign__white">Assinar</p>
             </section>
 
-            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3">
+            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 laptop:w-64 laptop:mx-0">
                 <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
                     <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
                     <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
@@ -73,7 +73,7 @@
                 <p class="assign__blue">Assinar</p>
             </section>
 
-            <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3">
+            <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3 laptop:w-64 laptop:mx-0">
                 <p class="font-semibold text-sm mb-4">Profissional</p>
                 <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span
                         class="text-xs text-newGray">/mês</span></p>
