--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 ideal para o seu próximo projeto.</p>
         </div>
 
-        <div id="sections__container" class="laptop:flex gap-8 items-baseline justify-center">
+        <div id="sections__container" class="laptop:flex gap-8 items-end justify-center laptop:mt-10">
 
-            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 laptop:w-64 laptop:mx-0">
+            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 laptop:mx-0 laptop:w-64">
                 <p class="font-semibold text-sm mb-4">Free</p>
                 <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
                         class="text-xs text-newGray">/mês</span></p>
@@ -95,7 +95,7 @@
                     <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <div class="flex items-center gap-2 mb-24">
+                <div class="flex items-center gap-2 mb-16">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
                     <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
                 </div>
