--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
         <div id="main__text--container">
             <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
-            <p class="text-newGray text-xs text-center mx-auto w-1/2 mt-0">Conheça nossas soluções e escolha o plano
+            <p class="text-newGray text-xs text-center mt-0 mx-auto w-1/2 laptop:w-1/3">Conheça nossas soluções e escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
 
-        <div id="sections__container" class="laptop:flex gap-8 items-end justify-center laptop:mt-10">
+        <div id="sections__container" class="sections__container--laptop">
 
             <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 laptop:mx-0 laptop:w-64">
                 <p class="font-semibold text-sm mb-4">Free</p>
