--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
         <div id="main__text--container">
-            <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2">Conheça nossos planos</h1>
-            <p class="text-newGray text-xs text-center mt-0 mx-auto w-1/2 laptop:w-1/3">Conheça nossas soluções e escolha o plano
+            <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2 desktop:text-5xl desktop:pt-14 desktop:pb-6">Conheça nossos planos</h1>
+            <p class="text-white text-xs desktop:text-base desktop:w-2/6 text-center mt-0 mx-auto w-1/2 laptop:w-1/3">Conheça nossas soluções e escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
 
