Updating desktop version

--- a/index.html
+++ b/index.html
@@ -26,80 +26,77 @@
 
         <div id="sections__container" class="sections__container--laptop">
 
-            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 laptop:mx-0 laptop:w-64">
-                <p class="font-semibold text-sm mb-4">Free</p>
-                <p class="font-bold text-lg mb-1">R$ 0<span class="text-xs">,00</span><span
-                        class="text-xs text-newGray">/mês</span></p>
-                <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <section id="section__free" class="bg-white rounded p-4 mt-4 mb-4 mx-auto w-2/3 section__responsivity">
+                <p class="font-semibold text-sm mb-4 desktop:text-lg">Free</p>
+                <p class="font-bold text-lg mb-1 desktop:text-xl">R$ 0<span class="text-xs desktop:text-sm">,00</span><span class="text-xs text-newGray desktop:text-sm">/mês</span></p>
+                <p class="text-xs text-newGray mb-4 desktop:text-sm desktop:w-72">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <hr>
 
                 <div class="flex items-center gap-2">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2 mb-32">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <p class="assign__white">Assinar</p>
             </section>
 
-            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 laptop:w-64 laptop:mx-0">
+            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 section__responsivity">
                 <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
-                    <p class="text-newBlue font-semibold text-sm w-full">Básico</p>
-                    <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl">Pesquisar</p>
+                    <p class="text-newBlue font-semibold text-sm w-full desktop:text-lg">Básico</p>
+                    <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl desktop:text-sm">Pesquisar</p>
                 </div>
 
-                <p class="font-bold text-lg px-4 mb-1">R$ 29<span class="text-xs">,00</span><span
-                        class="text-xs text-newGray">/mês</span></p>
-                <p class="text-xs text-newGray px-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="font-bold text-lg px-4 mb-1 desktop:text-xl">R$ 29<span class="text-xs desktop:text-sm">,00</span><span class="text-xs text-newGray desktop:text-sm">/mês</span></p>
+                <p class="text-xs text-newGray px-4 mb-4 desktop:text-sm desktop:w-72">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <hr>
 
                 <div class="flex items-center gap-2 px-4">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2 px-4">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2 px-4 mb-24">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <p class="assign__blue">Assinar</p>
             </section>
 
-            <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3 laptop:w-64 laptop:mx-0">
-                <p class="font-semibold text-sm mb-4">Profissional</p>
-                <p class="font-bold text-lg mb-1">R$ 59<span class="text-xs">,00</span><span
-                        class="text-xs text-newGray">/mês</span></p>
-                <p class="text-xs text-newGray mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3 section__responsivity">
+                <p class="font-semibold text-sm mb-4 desktop:text-lg">Profissional</p>
+                <p class="font-bold text-lg mb-1 desktop:text-xl">R$ 59<span class="text-xs desktop:text-sm">,00</span><span class="text-xs text-newGray desktop:text-sm">/mês</span></p>
+                <p class="text-xs text-newGray mb-4 desktop:text-sm desktop:w-72">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <hr>
 
                 <div class="flex items-center gap-2">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <div class="flex items-center gap-2 mb-16">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
-                    <p class="text-xs mt-3">Lorem ipsum dolor sit amet</p>
+                    <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
                 <p class="assign__white">Assinar</p>
