Refactoring desktop version

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <p class="assign__white">Assinar</p>
             </section>
 
-            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 section__responsivity">
-                <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4">
+            <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 section__responsivity desktop:p-0">
+                <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4 desktop:px-6 desktop:py-5 desktop:gap-40">
                     <p class="text-newBlue font-semibold text-sm w-full desktop:text-lg">Básico</p>
                     <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl desktop:text-sm">Pesquisar</p>
                 </div>
