--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Pricing Table</title>
 </head>
 
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
+        <div id="themeSwitcher">
+            <input type="checkbox" id="slider" name="slider">
+            <i id="sun" class="fa-regular fa-sun"></i>
+            <i id="moon" class="fa-solid fa-moon"></i>
+        </div>
+
         <div id="main__text--container">
             <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2 h1__desktop">Conheça nossos
                 planos</h1>
