Updating switcher (flex)

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
-        <div id="themeSwitcher">
-            <input type="checkbox" id="slider" name="slider">
-            <i id="sun" class="fa-regular fa-sun"></i>
-            <i id="moon" class="fa-solid fa-moon"></i>
+        <div id="themeSwitcher" class="bg-slate-50 rounded-full flex items-center justify-between absolute top-1 right-1 h-6 w-16">
+            <input type="checkbox" id="slider" name="slider" class="hidden">
+            <i id="sun" class="fa-regular fa-sun ml-1"></i>
+            <i id="moon" class="fa-solid fa-moon mr-1"></i>
         </div>
 
         <div id="main__text--container">
-            <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-4 pb-2 h1__desktop">Conheça nossos
+            <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2 h1__desktop">Conheça nossos
                 planos</h1>
             <p class="text-white text-xs text-center mt-0 mx-auto w-1/2 p__responsivity">Conheça nossas soluções e
                 escolha o plano
