--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
-        <div id="themeSwitcher" class="bg-slate-50 rounded-full flex items-center justify-between absolute top-1 right-1 h-6 w-16">
-            <input type="checkbox" id="slider" name="slider" class="hidden">
+        <div id="themeSwitcher" class="bg-slate-50 rounded-full flex items-center justify-between absolute top-2 right-1 h-6 w-14">
+            <div class="bg-black h-5 w-5 rounded-full absolute left-1"></div>
             <i id="sun" class="fa-regular fa-sun ml-1"></i>
             <i id="moon" class="fa-solid fa-moon mr-1"></i>
         </div>
