--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
         <div id="themeSwitcher" class="bg-black rounded-full flex items-center justify-between absolute top-2 right-1 h-6 w-14">
-            <div class="bg-slate-50 h-5 w-5 rounded-full absolute left-8 transition ease-in-out delay-150"></div>
+            <div id="firstBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-1 transition ease-in-out delay-150"></div>
+            <div id="secondBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-8 transition ease-in-out delay-150 hidden"></div>
             <i id="sun" class="fa-regular fa-sun ml-2 text-newYellow"></i>
             <i id="moon" class="fa-solid fa-moon mr-2 text-newYellow"></i>
         </div>
