--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <body class="font-sans">
     <main class="flex flex-col bg-gradient-to-b from-newBlue to-newBlue w-full h-screen laptop:h-half">
         <div id="themeSwitcher" class="bg-black rounded-full flex items-center justify-between absolute top-2 right-1 h-6 w-14">
-            <div id="firstBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-1 transition ease-in-out delay-150"></div>
-            <div id="secondBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-8 transition ease-in-out delay-150 hidden"></div>
+            <div id="firstBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-1"></div>
+            <div id="secondBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-8 hidden"></div>
             <i id="sun" class="fa-regular fa-sun ml-2 text-newYellow"></i>
             <i id="moon" class="fa-solid fa-moon mr-2 text-newYellow"></i>
         </div>
 
         <div id="main__text--container">
-            <h1 class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2 h1__desktop">Conheça nossos
+            <h1 id="title" class="bg-newBlue text-white text-2xl font-semibold text-center pt-8 pb-2 h1__desktop">Conheça nossos
                 planos</h1>
-            <p class="text-white text-xs text-center mt-0 mx-auto w-1/2 p__responsivity">Conheça nossas soluções e
+            <p id="subtitle" class="text-white text-xs text-center mt-0 mx-auto w-1/2 p__responsivity">Conheça nossas soluções e
                 escolha o plano
                 ideal para o seu próximo projeto.</p>
         </div>
