--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="themeSwitcher" class="bg-black rounded-full flex items-center justify-between absolute top-2 right-1 h-6 w-14">
             <div id="firstBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-1"></div>
             <div id="secondBall" class="bg-slate-50 h-5 w-5 rounded-full absolute left-8 hidden"></div>
-            <i id="sun" class="fa-regular fa-sun ml-2 text-newYellow"></i>
-            <i id="moon" class="fa-solid fa-moon mr-2 text-newYellow"></i>
+            <i class="fa-regular fa-sun ml-2 text-newYellow"></i>
+            <i class="fa-solid fa-moon mr-2 text-newYellow"></i>
         </div>
 
         <div id="main__text--container">
