--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__white">Assinar</p>
+                <p class="assign__white cursor-pointer">Assinar</p>
             </section>
 
             <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 section__responsivity desktop:p-0">
                 <div id="search__button--container" class="bg-newYellow rounded flex items-center px-4 py-3 mb-4 desktop:px-6 desktop:py-5 desktop:gap-40">
                     <p id="basic__title" class="text-newBlue font-semibold text-sm w-full desktop:text-lg">Básico</p>
-                    <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl desktop:text-sm">Pesquisar</p>
+                    <p class="bg-newBlue text-xs text-white px-3 py-1 rounded-xl desktop:text-sm cursor-pointer">Pesquisar</p>
                 </div>
 
                 <p class="font-bold text-lg px-4 mb-1 desktop:text-xl">R$ 29<span class="text-xs desktop:text-sm">,00</span><span class="text-xs text-newGray desktop:text-sm">/mês</span></p>
@@ -78,7 +78,7 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__blue">Assinar</p>
+                <p class="assign__blue cursor-pointer">Assinar</p>
             </section>
 
             <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3 section__responsivity">
@@ -107,7 +107,7 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__white">Assinar</p>
+                <p class="assign__white cursor-pointer">Assinar</p>
             </section>
         </div>
     </main>
