Creating assign hover

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__white cursor-pointer">Assinar</p>
+                <p class="assign__white cursor-pointer assign__hover">Assinar</p>
             </section>
 
             <section id="section__basic" class="bg-slate-50 rounded mb-4 mx-auto pb-1 w-2/3 section__responsivity desktop:p-0">
@@ -78,7 +78,7 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__blue cursor-pointer">Assinar</p>
+                <p class="assign__blue cursor-pointer assign__hover">Assinar</p>
             </section>
 
             <section id="section__profissional" class="bg-white rounded p-4 mb-4 mx-auto w-2/3 section__responsivity">
@@ -107,7 +107,7 @@
                     <p class="text-xs mt-3 desktop:text-sm">Lorem ipsum dolor sit amet</p>
                 </div>
 
-                <p class="assign__white cursor-pointer">Assinar</p>
+                <p class="assign__white cursor-pointer assign__hover">Assinar</p>
             </section>
         </div>
     </main>
