--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <p class="font-bold text-lg px-4 mb-1 desktop:text-xl">R$ 29<span class="text-xs desktop:text-sm">,00</span><span class="text-xs text-newGray desktop:text-sm">/mês</span></p>
                 <p class="text-xs text-newGray px-4 mb-4 desktop:text-sm desktop:w-72">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <hr>
+                <hr class="mx-auto w-11/12">
 
                 <div class="flex items-center gap-2 px-4">
                     <img src="src/icons/check.svg" class="mt-4" alt="Check">
